--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "scripts": {
-    "debug":"tsc && node build/main.js"
+    "debug": "tsc && node build/main.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.1",
+    "@jest/globals": "^29.7.0",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "type-fest": "^4.15.0",
     "typescript": "^5.4.5"
