--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "debug": "tsc && node build/main.js"
+    "debug": "tsc && node build/main.js",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
@@ -12,6 +13,7 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
     "type-fest": "^4.15.0",
     "typescript": "^5.4.5"
   },
